--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,35 +1,10 @@
-@import './base.css';
+@import "tailwindcss";
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  font-weight: normal;
-}
-
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-  padding: 3px;
-}
-
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
-}
-
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
+@theme{
+    --color-first : oklch(72.45% 0.189 50.94);
+    --color-second : oklch(75.3% 0.1738 56.58);
+    --color-third : oklch(79.86% 0.144 61.46);
+    --color-forth : oklch(83.2% 0.1249 66.11);
+    --color-fifth : oklch(97.02% 0.03 83.63);
+    --color-sixth : oklch(96.99% 0.0168 83.63);
 }
